<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_new_game"
        android:title="@string/action_new_game"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/sound_on_off"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
