<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">
        <TextView
            android:id="@+id/tvNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/app_name"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/newGame"
            android:textColor="#000000"
            android:shadowColor="#00ccff"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            />
        <Button
            android:id="@+id/btnContinueGame"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/continueGame"
            android:textColor="#000000"
            android:shadowColor="#00ccff"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>
